tests/snapshots/integration__integration_tests__approval_ui__approval_multiple_commands.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----

----- stderr -----
🟡 [33m[1mrepo[22m needs approval to execute [1m4[22m commands:[39m

⚪ post-create [1mbranch[22m:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Branch: test-nested-branch'[0m[2m[0m
⚪ post-create [1mworktree[22m:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Worktree: [REPO].test-nested-branch'[0m[2m[0m
⚪ post-create [1mrepo[22m:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Repo: repo'[0m[2m[0m
⚪ post-create [1mpwd[22m:
[107m [0m  [2m[0m[2m[34mcd[0m[2m [REPO].test-nested-branch [0m[2m[36m&&[0m[2m [0m[2m[34mpwd[0m[2m[0m
❌ [31mCannot prompt for approval in non-interactive environment[39m

💡 [2mIn CI/CD, use [90m--force[39m to skip prompts. To pre-approve commands, use [90mwt hook approvals add[39m[22m
